refactor: organize Java packages and migrate deprecated APIs